# configdb

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  CHANGELOG  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml  docs-gh-pages.yml  publish-docker.yaml
configdb/: auth_backends.py  schema.py  settings.py  urls.py  wsgi.py
configdb/hardware/: admin.py  api_views.py  apps.py  availability.py  heroic.py  models.py  serializers.py  tests.py  urls.py  validator.py  views.py
configdb/hardware/migrations/: 0001_initial.py  0003_horizon_ha.py  0008_auto_20180730_2339.py  0010_remove_camera_modes.py  0011_auto_20190123_1833.py  0013_auto_20190201_2351.py  0015_telescope_zenith_blind_spot.py  0016_auto_20190814_0723.py  0017_auto_20200521_0229.py  0018_genericmode_validation_schema.py  0019_merge_20200617_2320.py  0021_add_instrument_type.py  0022_populate_instrument_type.py  0023_auto_20200709_0718.py  0024_instrumenttype_validation_schema.py  0025_auto_20210310_0754.py  0026_auto_20210310_0804.py  0027_remove_instrumenttype_configuration_types.py  0028_auto_20210721_0650.py  0029_instrumenttype_default_configuration_type.py  (+8 more)
configdb3/: auth_backends.py  settings.py  urls.py  wsgi.py
configdb3-deploy/: docker-compose.yml  nginx-app.conf  supervisor-app.conf
configdb3/hardware/: admin.py  api_views.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
deploy/: docker-compose.yml
docker/: init  local_settings.py  nginx-app.conf  supervisor-app.conf  uwsgi.ini
present/: ConfigDB2.ipynb  requirements.txt
templates/rest_framework/: api.html
(+40 files in other folders)
